--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -15,4 +15,5 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     --brand-red: #ca202a;
     --brand-green: #116c3a;
     --brand-light-green: #a5cb41;
+    --light-grey: #f7f7f7;
 }
